tests/snapshots/examples_fixtures/type_classes__ConsoleLoggerExample__App__Main.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/ConsoleLoggerExample/App/Main.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `ConsoleLoggerExample.App.Main` doesn't match file path `examples/type_classes/ConsoleLoggerExample/App/Main.flx`.

  examples/type_classes/ConsoleLoggerExample/App/Main.flx:5:1
  |
5 | module ConsoleLoggerExample.App.Main {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
