tests/snapshots/examples_fixtures/type_classes__ConsoleLoggerExample__App__StdLog.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/ConsoleLoggerExample/App/StdLog.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `ConsoleLoggerExample.App.StdLog` doesn't match file path `examples/type_classes/ConsoleLoggerExample/App/StdLog.flx`.

  examples/type_classes/ConsoleLoggerExample/App/StdLog.flx:4:1
  |
4 | module ConsoleLoggerExample.App.StdLog {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
